--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.34",
+    "@solana/wallet-adapter-wallets": "^0.19.22",
+    "daisyui": "^3.9.2",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.4.0",
+    "formik": "^2.4.5",
+    "lodash": "^4.17.21",
+    "nearest-color": "^0.4.4",
+    "next": "^13.5.4",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "react-multi-carousel": "^2.8.4",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5"
   }
 }
