--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.22",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
     "daisyui": "^3.9.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.4.0",
