--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
